# proto-compile-example

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  bazelBuild.sh  build.cmd  build.sh  dockerBuild.cmd  env.sh  package.json  tsconfig.json
api/: BUILD.bazel  greeter.proto  thing.proto
example/: BUILD  greeter.proto
proto/: BUILD  greeter.proto  thing.proto
