# load("@build_stack_rules_proto//cpp:cpp_proto_compile.bzl", "cpp_proto_compile")

# cpp_proto_compile(
#   name = "thing_cpp_proto",
#   deps = [":thing_proto"],
# )

load("@build_stack_rules_proto//go:go_proto_compile.bzl", "go_proto_compile")

go_proto_compile(
    name = "thing_go_proto",
    deps = [":thing_proto"],
)

proto_library(
    name = "thing_proto",
    srcs = ["thing.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)